Solve the z-index problem with the logo on the navbar

--- a/src/components/NavBar/BurgerMenu/BurgerMenu.css
+++ b/src/components/NavBar/BurgerMenu/BurgerMenu.css
@@ -132,6 +132,20 @@ nav {
 .nav-bar-desktop {
   display: none;
 }
+
+.navbar-logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: black;
+}
+
+.navbar-logo-container img {
+  z-index: 99999;
+  position: fixed;
+  top: 2%;
+}
+
 @media only screen and (min-width: 700px) {
   .nav-container {
     background-color: rgba(0, 0, 0, 0.9);
